# lang_rust

./: .gitignore  Cargo.toml  README.md
lang-lib/: Cargo.toml
lang-lib/src/: cabocha.rs  file.rs  func.rs  lib.rs  mecab.rs
problem/: Cargo.toml
problem/output/: 044.txt  045.txt
