[package]
name = "problem"
version = "0.1.0"
authors = ["kamedon <hkamei@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lang-lib = { path = "../lang-lib" }
rand = "0.7.3"
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"
regex='1.4.2'
itertools = "0.9.0"